[package]
name        = "mw"
version     = "0.0.0"
edition     = "2021"
description = "Monero wrapper"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/hinto-janai/mw"
keywords    = ["monero", "wallet", "cli", "wrapper"]

[features]
default = []

[dependencies]
anyhow             = { version = "1.0.86" }
arti-client        = { version = "0.19.0" }
bincode            = { version = "2.0.0-rc.3", features = ["serde"] }
clap               = { version = "4.5.7", features = ["derive"] }
crossbeam          = { version = "0.8.4", features = ["crossbeam-channel"] }
const_format       = { version = "0.2.32", features = ["rust_1_51", "assertcp", "rust_1_64"] }
compact_str        = { version = "0.7.1" }
dirs               = { version = "5.0.1" }
flate2             = { version = "1.0.30" }
hyper              = { version = "1.3.1" }
open               = { version = "5.1.4" }
paste              = { version = "1.0.15" }
pgp                = { version = "0.13.0" }
rand               = { version = "0.8.5", features = ["small_rng"] }
ratatui            = { version = "0.26.3" }
redb               = { version = "2.1.1" }
reqwest            = { version = "0.12.5" }
serde              = { version = "1.0.203", features = ["derive"] }
sha256             = { version = "1.5.0" }
static_assertions  = { version = "1.1.0" }
strum              = { version = "0.26.2", features = ["derive"] }
tar                = { version = "0.4.41" }
tokio              = { version = "1.38.0", features = ["full"] }
toml_edit          = { version = "0.22.14", features = ["serde"] }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

# Optional features.

[dev-dependencies]

[lints.clippy]
# Cold
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
doc_link_with_quotes = "deny"
empty_enum = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
from_iter_instead_of_collect = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
invalid_upcast_comparisons = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
implicit_clone = "deny"
manual_c_str_literals = "deny"
manual_instant_elapsed = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
mismatching_type_param_order = "deny"
mut_mut = "deny"
needless_bitwise_bool = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_raw_string_hashes = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
option_as_ref_cloned = "deny"
option_option = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
pub_underscore_fields = "deny"
redundant_closure_for_method_calls = "deny"
ref_as_ptr = "deny"
ref_option_ref = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_join = "deny"
unnested_or_patterns = "deny"
unused_async = "deny"
unused_self = "deny"
used_underscore_binding = "deny"
zero_sized_map_values = "deny"
as_ptr_cast_mut = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr = "deny"
equatable_if_let = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
negative_feature_names = "deny"
non_send_fields_in_send_ty = "deny"
nonstandard_macro_braces = "deny"
path_buf_push_overwrite = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_feature_names = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
uninhabited_references = "deny"
unnecessary_struct_initialization = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
wildcard_dependencies = "deny"
unseparated_literal_suffix = "deny"
unnecessary_safety_doc = "deny"
unnecessary_safety_comment = "deny"
unnecessary_self_imports = "deny"
tests_outside_test_module = "deny"
string_to_string = "deny"
rest_pat_in_fully_bound_structs = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

# Warm
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
copy_iterator = "deny"
doc_markdown = "deny"
explicit_deref_methods = "deny"
explicit_iter_loop = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
into_iter_without_iter = "deny"
iter_without_into_iter = "deny"
iter_not_returning_iterator = "deny"
large_digit_groups = "deny"
large_types_passed_by_value = "deny"
manual_assert = "deny"
maybe_infinite_iter = "deny"
missing_fields_in_debug = "deny"
needless_pass_by_value = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
redundant_else = "deny"
ref_binding_to_reference = "deny"
return_self_not_must_use = "deny"
single_match_else = "deny"
string_add_assign = "deny"
transmute_ptr_to_ptr = "deny"
unchecked_duration_subtraction = "deny"
unnecessary_box_returns = "deny"
unnecessary_wraps = "deny"
branches_sharing_code = "deny"
fallible_impl_from = "deny"
missing_const_for_fn = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
try_err = "deny"
lossy_float_literal = "deny"
let_underscore_must_use = "deny"
iter_over_hash_type = "deny"
impl_trait_in_params = "deny"
get_unwrap = "deny"
error_impl_error = "deny"
empty_structs_with_brackets = "deny"
empty_enum_variants_with_brackets = "deny"
empty_drop = "deny"
clone_on_ref_ptr = "deny"

# Hot
inline_always = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
linkedlist = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
should_panic_without_expect = "deny"
similar_names = "deny"
too_many_lines = "deny"
unreadable_literal = "deny"
wildcard_imports = "deny"
missing_copy_implementations = "deny"
missing_docs = "deny"
non_exhaustive_omitted_patterns = "deny"
unused_results = "deny"
allow_attributes_without_reason = "deny"
missing_assert_message = "deny"
missing_docs_in_private_items = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
single_char_lifetime_names = "deny"
wildcard_enum_match_arm = "deny"

[lints.rust]
# Cold
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "deny"
keyword_idents = "deny"
missing_abi = "deny"
non_ascii_idents = "deny"
non_local_definitions = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
ambiguous_glob_imports = "deny"
unused_unsafe = "deny"

# Warm
let_underscore_drop = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"
